<resources>
    <string name="app_name">SFF Guild</string>
    <!-- Entry Activity-->
    <string name="swipeItemText1">Are you tired of living in your bleak life?</string>
    <string name="swipeItemText2">You want to blast into new galaxies?</string>
    <string name="swipeItemText3">Then, you are in the right place!</string>
    <!-- Login-->
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="loginAccount">Already have an account?<br />Welcome back!</string>
    <string name="logintoRegisterAccount">New user? Register here</string>
    <string name="emailEmptyError">Email cannot be empty!</string>
    <string name="emailInvalidError">Email is invalid!</string>
    <string name="passwordEmptyError">Password cannot be empty!</string>
    <string name="passwordInvalidError">Password is invalid!</string>
    <string name="loginSuccessMessage">Welcome, %s!</string>
    <string name="loginErrorMessage">Wrong username or password</string>
    <!-- Register-->
    <string name="registerAccount">It is nice to see you join!</string>
    <string name="nameHint">Name Surname</string>
    <string name="phoneHint">Phone Number</string>
    <!-- Main Activity-->
    <string name="cartFragment">My Cart</string>
    <string name="homePage">Home</string>
    <string name="shopName">SFF Guild</string>
    <string name="profileFragment">My Profile</string>
    <string name="campaignFragment">Campaigns</string>
    <string name="addCart">Add to Cart</string>
    <string name="addedToCart">added to cart!</string>
    <!-- Profile Fragment-->
    <string name="adresses">Adresses</string>
    <string name="favouriteSellers">Favourite Sellers</string>
    <string name="paymentMethods">Payment Methods</string>
    <string name="orderInfo">Order Info</string>
    <string name="cartSubtotal">Subtotal:</string>
    <string name="shippingCart">Shipping:</string>
    <string name="cartTotal">Total:</string>
    <string name="shippingPrice">$3.99</string>
    <string name="cartCheckout">Checkout</string>
    <string name="dollars">\$</string>

</resources>