<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="entryLoginFragment"
            type="com.begumyolcu.ecommerceproject.entry.EntryLoginFragment" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/background_login" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".entry.EntryLoginFragment">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/midDistance"
                android:layout_marginTop="@dimen/largeEdgeDistance"
                android:layout_marginEnd="@dimen/midDistance"
                android:hint="@string/emailHint"
                app:hintTextColor="@color/primaryDarkColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextLoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/oswald"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/midDistance"
                android:layout_marginTop="@dimen/edgeDistance"
                android:layout_marginEnd="@dimen/midDistance"
                android:hint="@string/passwordHint"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/oswald"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/generalImageDimen"
                android:layout_height="@dimen/generalImageDimen"
                android:layout_marginTop="@dimen/edgeDistance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/login_item" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="@dimen/largeDimen"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/midDistance"
                android:layout_marginTop="@dimen/largeEdgeDistance"
                android:fontFamily="@font/oswald"
                android:maxLines="3"
                android:minLines="2"
                android:singleLine="false"
                android:text="@string/loginAccount"
                android:textColor="@color/textColor2"
                android:textSize="@dimen/radioDimen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/edgeDistance"
                android:layout_marginTop="@dimen/edgeDistance"
                android:layout_marginEnd="@dimen/edgeDistance"
                android:fontFamily="@font/oswald"
                android:text="@string/loginButton"
                android:textSize="@dimen/smallTextDimen"
                app:cornerRadius="@dimen/buttonCornerDimen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

            <Button
                android:id="@+id/buttonToRegister"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/midDistance"
                android:fontFamily="@font/oswald"
                android:onClick="@{() -> entryLoginFragment.registerPressed(buttonToRegister)}"
                android:text="@string/logintoRegisterAccount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>
