<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="registerFragment"
            type="com.begumyolcu.ecommerceproject.entry.RegisterFragment" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".entry.RegisterFragment">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/background_register" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="@dimen/generalImageDimen"
                android:layout_height="@dimen/generalImageDimen"
                android:layout_marginTop="@dimen/midDistance"
                android:layout_marginEnd="@dimen/smallDistance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/image_register" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="@dimen/largeDimen"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/midDistance"
                android:layout_marginTop="@dimen/largeEdgeDistance"
                android:fontFamily="@font/oswald"
                android:maxLines="3"
                android:minLines="2"
                android:singleLine="false"
                android:text="@string/registerAccount"
                android:textColor="@color/textColor1"
                android:textSize="@dimen/radioDimen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonRegistration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/largeEdgeDistance"
                android:layout_marginTop="@dimen/midDistance"
                android:layout_marginEnd="@dimen/largeEdgeDistance"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/swipeColor1"
                android:fontFamily="@font/oswald"
                android:text="@string/registerButton"
                android:textSize="@dimen/smallTextDimen"
                android:onClick="@{() -> registerFragment.onRegisterPressed(editTextRegisterEmail.getText().toString(),editTextRegisterPassword.getText().toString(),editTextRegisterName.getText().toString(),editTextRegisterPhone.getText().toString())}"
                app:cornerRadius="@dimen/buttonCornerDimen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout9" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/midDistance"
                android:layout_marginTop="@dimen/edgeDistance"
                android:layout_marginEnd="@dimen/midDistance"
                android:hint="@string/nameHint"
                android:textColorHint="@color/textColor1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView5">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextRegisterName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout6"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/midDistance"
                android:layout_marginTop="@dimen/smallDistance"
                android:layout_marginEnd="@dimen/midDistance"
                android:hint="@string/emailHint"
                android:textColorHint="@color/textColor1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextRegisterEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout7"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/midDistance"
                android:layout_marginTop="@dimen/smallDistance"
                android:layout_marginEnd="@dimen/midDistance"
                android:hint="@string/phoneHint"
                android:textColorHint="@color/textColor1"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextRegisterPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout9"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/midDistance"
                android:layout_marginTop="@dimen/smallDistance"
                android:layout_marginEnd="@dimen/midDistance"
                android:hint="@string/passwordHint"
                android:textColorHint="@color/textColor1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout7"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextRegisterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>
